--- a/Professor/nbproject/project.properties
+++ b/Professor/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/Professor.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.postgresql-42.2.5.jar=src\\conexao\\postgresql-42.2.5.jar
+file.reference.postgresql-42.2.5.jar-1=src\\bibliotecas\\postgresql-42.2.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-42.2.5.jar}
+    ${file.reference.postgresql-42.2.5.jar}:\
+    ${file.reference.postgresql-42.2.5.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
